# QuickLyrics

./: README.md  setup.cfg
src/quicklyrics/: __init__.py  constant.py  lyrics.py  quick_lyrics.py
src/quicklyrics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
