[metadata]
name = quicklyrics
version = 1.0.0
author = Rishabh Bhardwaj
author_email = rishabh.bhardwaj33@gmail.com
description = Powerful library to search for music lyrics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rishabh3354/QuickLyrics
project_urls =
    Bug Tracker = https://github.com/rishabh3354/QuickLyrics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
